# gallery-view

./: .gitignore  CHANGELOG.md  README.md  app.py  input.css  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: config.py  main.py  routes.py
app/service/: media_scan.py  thumbnails.py
app/static/: readme.md
app/templates/: gallery.html
app/utils/: files.py
src/: main.ts
src/js/: init.ts
src/js/modules/: api.ts  gallery.ts  modal.ts  modalSwipe.ts  pagination.ts  utils.ts
static/: output.css  style.css
static/js/: init.js  main.js
templates/: gallery.html  style.css
